--- a/plugin.xml
+++ b/plugin.xml
@@ -15,7 +15,7 @@
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
         <source-file src="src/android/thsWyyxIM.java" target-dir="src/cn/com/ths/wyyx/im/thsWyyxIM" />
-        <!-- <source-file src="src/android/thsWyyxIM.aar" target-dir="libs" />
-        <framework custom="true" src="src/android/thsWyyxIM.gradle" type="gradleReference" /> -->
+        <source-file src="src/android/thsWyyxIM.aar" target-dir="libs" />
+        <framework custom="true" src="src/android/thsWyyxIM.gradle" type="gradleReference" />
     </platform>
 </plugin>
