--- a/src/android/thsWyyxIM.gradle
+++ b/src/android/thsWyyxIM.gradle
@@ -8,12 +8,16 @@ repositories {
 ext.supportLibVersion = '27.+'
 ext.kotlin_version = '1.2.71'
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
     implementation(name: "thsWyyxIM", ext: 'aar')
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+
+    implementation 'com.android.support:appcompat-v7:${supportLibVersion}'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.parse:parse-android:1.13.1'
-    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.jakewharton:butterknife:9.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
    
 }
 //ext.postBuildExtras会在最后执行，覆盖Android模块的gradle配置
